--- a/app/views/buildings/show.html.erb
+++ b/app/views/buildings/show.html.erb
@@ -102,5 +102,5 @@ function init() {
 <h4>Для вас на объект заявок нет</h4>
 <% end %> 
 
-<%= link_to 'Назад', :back, class: "btn btn-large btn-primary" %>
+<%= link_to 'Назад', requistions_path, class: "btn" %>
 </div>
