--- a/app/views/requistions/new.html.erb
+++ b/app/views/requistions/new.html.erb
@@ -5,16 +5,34 @@
 	<%= form_for @requistion, :html => {:class => "form-vertical"} do |f| %>
 		<div class="row">
 	 		<div class="form-group">
-				<label class=" col-xs-3">Объект - Адрес</label>
+					<label class=" col-xs-3">Объект</label>
+					<div  class="col-xs-5">
+					<select id="building_name" name="name" style="width: 100%" placeholder="Выберите исполнителей">
+					<%=	options_for_select(@list.collect {|p| [ p.name ] }) %>
+					</select>
+					</div>
+				<script>
+				$('#building_name').select2({
+				  placeholder: "Выберите объект",
+					allowClear: true
+				});
+				</script>
+
+			</div>
+		</div>
+		<div class="row">
+	 		<div class="form-group">
+				<label class=" col-xs-3">Адрес</label>
 				<div class="col-xs-5">
-				<%= f.select :building_id, 
+				<%= f.select "building_id", 
 				options_for_select(@list.collect {|p| [ (p.name.to_s + " - " + p.arrival_address.to_s), p.id ] }), 
-				{:prompt => "Выберите из списка адрес прибытия специалистов"}, {:class => "selectize", required: ""  }%>
+				{:prompt => "Выберите из списка адрес прибытия специалистов"}, { required: "", style: "width: 100%"}%>
 
 				</div>
 				<script>
-				$('#requistion_building_id').selectize({
-					
+				$('#requistion_building_id').select2({
+				  placeholder: "Выберите адресс",
+					allowClear: true
 				});
 				</script>
 
@@ -25,7 +43,7 @@
 			<div class="form-group">
 				<label class=" col-xs-3">ФИО контактного лица заказчика</label>
 				<div class="col-xs-5">
-				<%= f.text_field :contact_name, :placeholder =>"Введите контактное лицо", class: "form-control", required: "" %>
+				<%= f.text_field :contact_name, :placeholder =>"Введите контактное лицо", class: "form-control", required: "", multiple: "" %>
 				</div>
 			</div>
 		</div>
@@ -85,7 +103,7 @@
 
 		<div class="row">
 			<div class="form-group">
-  				<label class=" col-xs-3">Исполнители</label>
+  			<label class=" col-xs-3">Исполнители</label>
 				<div  class="col-xs-5">
 				<select id="workers-select" name="workers[]" multiple  placeholder="Выберите исполнителей">
 				<%= options_for_select(User.worker.collect {|p| [ p.name, p.id ] })	%>
