add deputy to requistion

--- a/app/views/requistions/new.html.erb
+++ b/app/views/requistions/new.html.erb
@@ -49,6 +49,14 @@
 		</div>
 		<div class="row">
 			<div class="form-group">
+				<label class=" col-xs-3">Должность контактного лица</label>
+				<div class="col-xs-5">
+				<%= f.text_field :deputy, :placeholder =>"Введите должность", class: "form-control" %>
+				</div>
+			</div>
+		</div>
+		<div class="row">
+			<div class="form-group">
 				<label class=" col-xs-3">Телефон контактного лица заказчика</label>
 				<div class="col-xs-5">
 				<%= f.text_field :contact_phone, :placeholder =>"Ввведите контактный телефон", class: "form-control phonemask", required: "" %>
