--- a/app/views/users/admin_new.html.erb
+++ b/app/views/users/admin_new.html.erb
@@ -17,12 +17,12 @@
 
 		<div class="form-group">
 			<label>Почта</label>
-			<%= f.text_field :email , class: "form-control", required: "" %>
+			<%= f.text_field :email , class: "form-control" %>
 		</div>
 
 		<div class="form-group">
 			<label>Сотовый телефон</label>
-			<%= f.text_field :phone, class: "form-control phonemask", required: "" %>
+			<%= f.text_field :phone, class: "form-control phonemask" %>
 		</div>
 
 		<div class="form-group">
