--- a/app/views/requistions/index.html.erb
+++ b/app/views/requistions/index.html.erb
@@ -106,6 +106,16 @@ jQuery(document).ready(function() {
 	});    
 	var archiver = $("#archive").appendTo('.archiver');
 });
+//Внесение с и по
+$(document).ready(function(){
+	$('input[class*="range"]:first-child').attr("placeholder", "C").each(function () {
+		this.previousSibling.parentNode.removeChild(this.previousSibling);
+	});
+	$('input[class*="range"]:last-child').attr("placeholder", "По").each(function () {
+		this.previousSibling.parentNode.removeChild(this.previousSibling);
+	});
+
+});
 </script>
 
 <table id="requistions" class="table table-wrapper">
