--- a/app/views/requistions/new.html.erb
+++ b/app/views/requistions/new.html.erb
@@ -6,16 +6,44 @@
 		<div class="row">
 	 		<div class="form-group">
 					<label class=" col-xs-3">Объект</label>
+				
 					<div  class="col-xs-5">
-					<select id="building_name" name="name" style="width: 100%" placeholder="Выберите исполнителей">
-					<%=	options_for_select(@list.collect {|p| [ p.name ] }) %>
-					</select>
+
+
+					<input id="building_name" name="name" style="width: 100%">
+					<%#=	options_for_select(@list.collect {|p| [ p.name, p.id ] }) %>
+					</input>
 					</div>
 				<script>
+
 				$('#building_name').select2({
-				  placeholder: "Выберите объект",
+					// data: <% data = '' %>
+					// <% @list.each do |p| data = data + "{ id:" + p.id.to_s + ", text:" + return_str(p.name)+ "}," end %>
+					// <%= '['+data[0...-1]+']' %>	,
+    				data: [{ id: 0, text: 'enhancement' }, { id: 1, text: 'bug' }, { id: 2, text: 'duplicate' }, { id: 3, text: 'invalid' }, { id: 4, text: 'wontfix' }],
+				  	placeholder: "Выберите объект",
 					allowClear: true
 				});
+				</script>
+				<script>
+$(document).ready(function() {
+ $("#requistion_building_id").change(function () {
+    alert(1);
+    var datastr =  [{ id: 0, text: 'enhancement' }, { id: 1, text: 'bug' }, { id: 2, text: 'duplicate' }, { id: 3, text: 'invalid' }, { id: 4, text: 'wontfix' }];
+    $('#building_name').select2({data: datastr});
+});
+});
+ // 	$("#requistion_building_id").change(function () {
+ // //		$('#building_name').select2({data: data});			
+ // 		$.ajax({url: "/update_objects_name",
+ // 			type: 'GET',
+ // 			dataType: 'html',
+ // 			data: "address=" + $('#requistion_building_id :selected').text(),
+ // 			success: function (f, status) {
+ // 					$('#building_name').select2({data: strd});
+ // 			}
+ // 		});
+
 				</script>
 
 			</div>
@@ -25,7 +53,7 @@
 				<label class=" col-xs-3">Адрес</label>
 				<div class="col-xs-5">
 				<%= f.select "building_id", 
-				options_for_select(@list.collect {|p| [ (p.name.to_s + " - " + p.arrival_address.to_s), p.id ] }), 
+				options_for_select(@list.collect {|p| [ (p.arrival_address.to_s), p.id ] }), 
 				{:prompt => "Выберите из списка адрес прибытия специалистов"}, { required: "", style: "width: 100%"}%>
 
 				</div>
