--- a/app/views/requistions/new.html.erb
+++ b/app/views/requistions/new.html.erb
@@ -4,80 +4,84 @@
 
 	<%= form_for @requistion, :html => {:class => "form-vertical"} do |f| %>
 		<div class="row">
-	 		<div class="form-group">
+			<div class="form-group">
 					<label class=" col-xs-3">Объект</label>
 					<div  class="col-xs-5">
-					<select required id="building_name" name="name" style="width: 100%" placeholder="Выберите название"> 
-					<%#=	options_for_select(@list.collect {|p| [ p.name ] }) %>
+					<select required id="building_name" name="name" style="width: 100%"> 
+						<%=	options_for_select(@list.collect {|p| [ p.name ] }) %>
 					</select>
-					</div>
+
 <script>
 
 $(document).ready(function() {
+	$('#building_name').select2({
+		placeholder: "название",
+		allowClear: true
+	});
+	
 	function formatRepo (repo) {
-    return repo.arrival_address;
-  }
+	return repo.arrival_address;
+  };
 
   function formatRepoSelection (repo) {
-    return repo.arrival_address;
-  }
+	return repo.arrival_address;
+  };
 
- 
-
-  $('#building_name').select2({
-  	placeholder: "Выберите адресс",
+  $('#building_id').select2({
 	allowClear: true,
-    ajax: {
-    url: "/search",
-    dataType: 'json',
-    delay: 1000,
-    data: function (params) {
-      return {
-        q: params.term, // search term
-        page: params.page
-      };
-    },
-    processResults: function (data, page) {
-      // parse the results into the format expected by Select2.
-      // since we are using custom formatting functions we do not need to
-      // alter the remote JSON data
-      console.log(data);
-      return {
-        results: data
-      };
-    },
-    cache: true
+	
+	ajax: {
+		url: "/search",
+		dataType: 'json',
+		delay: 1000,
+		data: function (params) {
+			name_in = $('#building_name').val();
+		  return {
+		  	name: name_in,
+				q: params.term, // search term
+				page: params.page
+		  };
+		},
+		processResults: function (data, page) {
+		  // parse the results into the format expected by Select2.
+		  // since we are using custom formatting functions we do not need to
+		  // alter the remote JSON data
+		  console.log(data);
+		  return {
+				results: data
+		  };
+		},
+		cache: true
   },
+  
   escapeMarkup: function (markup) { return markup; }, // let our custom formatter work
   templateResult: formatRepo,
-  templateSelection: formatRepoSelection
+  templateSelection: formatRepoSelection,
+  placeholder: "название"
+  }).change(function(){  		
+  		$.ajax({url: "/building_name/"+ $('#building_id').val(), success: function(result){
+        $('#building_name').select2('val', result);
+    	}})
   });
 });
-</script>
-
+</script>					
+				</div>
 			</div>
 		</div>
 		<div class="row">
-	 		<div class="form-group">
+			<div class="form-group">
 				<label class=" col-xs-3">Адрес</label>
 				<div class="col-xs-5">
-				<%= f.select "building_id", 
-				options_for_select(@list.collect {|p| [ p.arrival_address, p.id ] }), 
-
-				{:prompt => "Выберите из списка адрес прибытия специалистов"}, { required: "", style: "width: 100%"}%>
+					<select required id="building_id" name="building_id" style="width: 100%"> 
+					</select>
 
 				</div>
-				<script>
-				$('#requistion_building_id').select2({
-				  placeholder: "Выберите адресс",
-					allowClear: true
-				});
-				</script>
+
 
 			</div>
 		</div>
 
-	 	<div class="row">
+		<div class="row">
 			<div class="form-group">
 				<label class=" col-xs-3">ФИО контактного лица заказчика</label>
 				<div class="col-xs-5">
@@ -150,7 +154,7 @@ $(document).ready(function() {
 
 		<div class="row">
 			<div class="form-group">
-  			<label class=" col-xs-3">Исполнители</label>
+			<label class=" col-xs-3">Исполнители</label>
 				<div  class="col-xs-5">
 				<select id="workers-select" name="workers[]" multiple  placeholder="Выберите исполнителей">
 				<%= options_for_select(User.worker.collect {|p| [ p.name, p.id ] })	%>
