add editing specialization and region

--- a/app/views/users/admin_new.html.erb
+++ b/app/views/users/admin_new.html.erb
@@ -21,6 +21,16 @@
 		</div>
 
 		<div class="form-group">
+			<label>Округ</label>
+			<%= f.text_field :region , class: "form-control" %>
+		</div>
+
+		<div class="form-group">
+			<label>Специализация</label>
+			<%= f.text_field :specialization , class: "form-control" %>
+		</div>
+
+		<div class="form-group">
 			<label>Сотовый телефон</label>
 			<%= f.text_field :phone, class: "form-control phonemask" %>
 		</div>
