--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -14,7 +14,17 @@
 			<label>Имя</label>
 			<%= f.text_field :name, class: "form-control", required: "" %>
 		</div>
+		<% if @user.worker? %>
+			<div class="form-group">
+				<label>Округ</label>
+				<%= f.text_field :region , class: "form-control" %>
+			</div>
 
+			<div class="form-group">
+				<label>Специализация</label>
+				<%= f.text_field :specialization , class: "form-control" %>
+			</div>
+		<% end %>
 		<div class="form-group">
 			<label>Почта</label>
 			<%= f.text_field :email, class: "form-control", required: "" %>
