--- a/app/views/users/workers.html.erb
+++ b/app/views/users/workers.html.erb
@@ -1,4 +1,4 @@
-<% provide(:title, "Рабочие") %>
+<% provide(:title, "Исполнители") %>
 <div class="container">	
 	<h1>Сотрудники</h1>
 	<div class="row">
