fix_contract_to_building

--- a/app/views/requistions/new.html.erb
+++ b/app/views/requistions/new.html.erb
@@ -55,7 +55,20 @@ $(document).ready(function() {
 		},
 		cache: true
   },
-  
+
+	$("#building_id").change(function () {
+		alert(1);
+		$.ajax({url: "/get_contracts_by_address",
+			type: 'GET',
+			dataType: 'html',
+			data: "address=" + $('#building_id :selected').text(),
+			success: function (data, status) {
+//                  alert("Data: " + data);
+					$("#table_contracts_in_new").html(data);
+			}
+		});
+	});
+
   escapeMarkup: function (markup) { return markup; }, // let our custom formatter work
   templateResult: formatRepo,
   templateSelection: formatRepoSelection,
