fix_contract_to_building

--- a/app/views/requistions/new.html.erb
+++ b/app/views/requistions/new.html.erb
@@ -29,6 +29,19 @@ $(document).ready(function() {
 	return repo.arrival_address;
   };
 
+	$("#building_id").change(function () {
+		alert(1);
+		$.ajax({url: "/get_contracts_by_address",
+			type: 'GET',
+			dataType: 'html',
+			data: "address=" + $('#building_id :selected').text(),
+			success: function (data, status) {
+                  alert("Data: " + data);
+					$("#table_contracts_in_new").html(data);
+			}
+		});
+	});
+
   $('#building_id').select2({
 	allowClear: true,
 	
@@ -56,18 +69,6 @@ $(document).ready(function() {
 		cache: true
   },
 
-	$("#building_id").change(function () {
-		alert(1);
-		$.ajax({url: "/get_contracts_by_address",
-			type: 'GET',
-			dataType: 'html',
-			data: "address=" + $('#building_id :selected').text(),
-			success: function (data, status) {
-//                  alert("Data: " + data);
-					$("#table_contracts_in_new").html(data);
-			}
-		});
-	});
 
   escapeMarkup: function (markup) { return markup; }, // let our custom formatter work
   templateResult: formatRepo,
