fix_contract_to_building

--- a/app/views/requistions/new.html.erb
+++ b/app/views/requistions/new.html.erb
@@ -30,7 +30,7 @@ $(document).ready(function() {
   };
 
 	$("#building_id").change(function () {
-		alert(1);
+		alert($('#building_id :selected').text());
 		$.ajax({url: "/get_contracts_by_address",
 			type: 'GET',
 			dataType: 'html',
