fix_contract_to_building

--- a/app/views/requistions/new.html.erb
+++ b/app/views/requistions/new.html.erb
@@ -34,7 +34,7 @@ $(document).ready(function() {
 		$.ajax({url: "/get_contracts_by_address",
 			type: 'GET',
 			dataType: 'html',
-			data: "address=" + $('#building_id :selected').text(),
+			data: "address=" + $('#building_id').val(),
 			success: function (data, status) {
                   alert("Data: " + data);
 					$("#table_contracts_in_new").html(data);
