--- a/app/assets/stylesheets/custom.css.scss.erb
+++ b/app/assets/stylesheets/custom.css.scss.erb
@@ -174,7 +174,7 @@ h1, .btn, p, label {
 }
 
 .form-vertical {
-	font-size: 24px;
+	font-size: 20px;
 
 	.row {
 		margin-top: 6px;
@@ -187,6 +187,7 @@ h1, .btn, p, label {
 	}
 	.form-control {
 		margin-bottom: 7px;
+		font-size: 16px;
 	}
 }
 
@@ -391,4 +392,34 @@ margin-left: 0;
 	.active {
 		font-size: 24px;
 	}
+}
+
+.select2-container .select2-choice {
+	white-space: nowrap;
+}
+
+
+.select2-selection {
+	border-color: #0064a3 #0064a3 #005e99 !important;
+color: black !important;
+text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.13) !important;
+-webkit-font-smoothing: antialiased !important;
+border-radius: 4px !important;
+text-shadow: none !important;
+font-size: 16px;
+line-height: 20px;
+}
+
+span.select2-selection.select2-selection--single {
+	height:25px;
+}
+
+.select2-selection__rendered {
+	margin-top: -4px;
+}
+
+.select2-selection__clear {
+	margin-top:-30px;
+	margin-left: 530px;
+	font-size: 25px;
 }
