contracts, changed view new
поле с по
ксс

--- a/app/assets/stylesheets/custom.css.scss.erb
+++ b/app/assets/stylesheets/custom.css.scss.erb
@@ -189,6 +189,10 @@ h1, .btn, p, label {
 		margin-bottom: 7px;
 		font-size: 16px;
 	}
+
+	.contractSmall {
+		font-size: 14px;
+	}
 }
 
 @media all and (max-width: 768px) {
@@ -398,6 +402,9 @@ margin-left: 0;
 	white-space: nowrap;
 }
 
+.select2 {
+	white-space: nowrap;
+}
 
 .select2-selection {
 	border-color: #0064a3 #0064a3 #005e99 !important;
