--- a/app/assets/stylesheets/custom.css.scss.erb
+++ b/app/assets/stylesheets/custom.css.scss.erb
@@ -394,7 +394,8 @@ margin-left: 0;
 	.selected{
 	}
 	.active {
-		font-size: 24px;
+		/*font-size: 24px;*/
+		background-color: rgb(86,143,255) !important;
 	}
 }
 
