--- a/app/views/users/admin_new.html.erb
+++ b/app/views/users/admin_new.html.erb
@@ -4,7 +4,7 @@
 	<div class="col-xs-4">
 	</div>
 	<div class="col-xs-4">
-		<h1>Добавление администратора</h1>
+		<h1>Добавление пользователя</h1>
 		
 		<%= render 'shared/error_messages' %>
 
