--- a/app/views/arrivals/index.html.erb
+++ b/app/views/arrivals/index.html.erb
@@ -69,8 +69,8 @@ function hidetxt(type){
 				<% @latecomers = User.where('status = 0 and id not in (?)	', @Arrivals_at_day) %>
 				<td>
 					<div>
-					<a onclick="hidetxt("+<%= i %>+"); return false;" href="#" rel="nofollow">Показать/Скрыть</a>
-					<div style="display:none;" id= <%= i%> >
+					<a onclick="hidetxt('1"+<%= i %>+"1'); return false;" href="#" rel="nofollow">Показать/Скрыть</a>
+					<div style="display:none;" id='1' + <%= i %> + '1' > 
 									<% @latecomers.each do |f|%>
 										<li><%= f.name %></li>
 									<% end %>
