fix_for_error_in_arrivals

--- a/app/views/requistions/index.html.erb
+++ b/app/views/requistions/index.html.erb
@@ -229,7 +229,7 @@ $(document).ready(function(){
 				<tr>
 					<th>Отменена</th>
 					<td id='show_time_change_canceled'></td>
-					<td id='show_who_cancel'>кто отменил</td>
+					<td id='show_who_cancel'></td>
 				</tr>
 				<tr>
 					<th>Выполнено</th>
