--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -32,7 +32,7 @@
 
 		<div class="form-group">
 			<label>Телефон</label>
-			<%= f.text_field :phone, class: "form-control phonemask", required: ""%>
+			<%= f.text_field :phone, class: "form-control phonemask"%>
 		</div>
 
 
