--- a/app/views/users/req.html.erb
+++ b/app/views/users/req.html.erb
@@ -71,7 +71,7 @@
 				<% @requistion = pair.requistion %>
 				<% if @requistion.completed? or @requistion.done? or @requistion.canceled? %>
 				<tr>
-					 <td><%= link_to @requistion.object,  {:controller => :requistions, :action => :show, :id => @requistion.id}, {:method => :get} %></td>
+					 <td><%= link_to Building.find(@requistion.building_id).name,  {:controller => :requistions, :action => :show, :id => @requistion.id}, {:method => :get} %></td>
 					 <td><%= link_to Building.find(@requistion.building_id).arrival_address,  {:controller => :buildings, :action => :show, :id => @requistion.building_id}, {:method => :get} %></td>
 					 <td> <%= transcript_of_the_messages(@requistion.type_requistion)+' '+transcript_of_the_messages(@requistion.subtype_requistions) %> </td>
 					 <td><%= @requistion.contact_phone+' '+@requistion.contact_name %></td>
