add_type_of_arrival

--- a/app/views/arrivals/index.html.erb
+++ b/app/views/arrivals/index.html.erb
@@ -16,6 +16,7 @@
 			<th>Иполнитель</th>
 			<th>Объект</th>
 			<th>Время</th>
+			<th>Тип</th>
 		</tr>
 	</thead>    
     <tbody>
@@ -24,6 +25,7 @@
 	    	<td> <%= f.user.name %> </td>
 	    	<td> <%= f.building.arrival_address %> </td>
 	    	<td> <%= f.date.strftime("%d.%m.%Y %H:%M") if  not f.date.nil? %></td>
+			<td> <%= f.check_type==0 ? Пришел : Ушел %></td>
 		</tr>
 		<% end %>
 	</tbody>
