--- a/app/views/arrivals/index.html.erb
+++ b/app/views/arrivals/index.html.erb
@@ -25,7 +25,7 @@
 	    	<td> <%= f.user.name %> </td>
 	    	<td> <%= f.building.arrival_address %> </td>
 	    	<td> <%= f.date.strftime("%d.%m.%Y %H:%M") if  not f.date.nil? %></td>
-			<td> <%= f.check_type %></td>
+			<td> <%= f.check_type=='check_in' ? "Пришел" : "Ушел" %></td>
 		</tr>
 		<% end %>
 	</tbody>
