add_type_of_arrival

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -68,6 +68,11 @@ $(document).ready(function(){
 									<% end %>
 								</li>
 								<li role="presentation">
+									<%= link_to workers_path do %>
+										<span class="glyphicon glyphicon-list"></span>&nbsp Администраторы
+									<% end %>
+								</li>
+								<li role="presentation">
 
 									<%= link_to contracts_path do %>
 										<span class="glyphicon glyphicon-list"></span>&nbsp Контракты
