--- a/app/views/users/req.html.erb
+++ b/app/views/users/req.html.erb
@@ -23,7 +23,7 @@
 			<tbody>
 				<% for pair in @all_pairs %>
 				<% @requistion = pair.requistion %>
-				<% if !@requistion.completed? and !@requistion.done? and !@requistion.canceled? %>
+				<% if !@requistion.nil? and !@requistion.completed? and !@requistion.done? and !@requistion.canceled? %>
 				
 				<tr>
 					 <td><%= link_to Building.find(@requistion.building_id).name,  {:controller => :requistions, :action => :show, :id => @requistion.id}, {:method => :get} %></td>
@@ -69,7 +69,7 @@
 			<tbody>
 				<% for pair in @all_pairs %>
 				<% @requistion = pair.requistion %>
-				<% if @requistion.completed? or @requistion.done? or @requistion.canceled? %>
+				<% if !@requistion.nil? and (@requistion.completed? or @requistion.done? or @requistion.canceled?) %>
 				<tr>
 					 <td><%= link_to Building.find(@requistion.building_id).name,  {:controller => :requistions, :action => :show, :id => @requistion.id}, {:method => :get} %></td>
 					 <td><%= link_to Building.find(@requistion.building_id).arrival_address,  {:controller => :buildings, :action => :show, :id => @requistion.building_id}, {:method => :get} %></td>
