--- a/app/views/contracts/index.html.erb
+++ b/app/views/contracts/index.html.erb
@@ -1,6 +1,10 @@
 <% provide(:title, 'Контракты') %>
 <h1>Контракты</h1>
 
+	<div class = "row">
+
+	</div>
+
 <script type="text/javascript">
 jQuery(document).ready(function() {
 	 $('#contracts').dataTable({
@@ -67,41 +71,27 @@ jQuery(document).ready(function() {
 
 <br>
 
-
-<div class="container">
-	<div class = "row">
-		<h3 style="text-align:left;  margin-left:15px;">Добавить контракт</h3>
-		<div class ="col-md-2">
-			<%= link_to new_contract_path do%>
-				<div class="btn btn-default">
- 		 		<span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
- 		 	</div>
-			<%end%>
-		</div>
-
-	</div>
-</div>
-
 <br>
 <div class="container">
-	<div class = "row">
 
-		<h3 style="text-align:left;  margin-left:15px;">Импортировать контракты</h3>
 
-		<%= form_tag import_contracts_path, multipart: true do %>
-			<div class="col-md-2">
-				<%= file_field_tag :file%>
-			</div>
-			<div class = "col-md-3">
-				Выберите файл с контрактами. Номер контракта должен быть уникальным. Разные адреса внутри одного контракта должны быть разделены ";"
-			</div>
-		</div>
+
+
+
 		<div class = "row">
-			<div class="col-md-3">
-			<%= submit_tag "Отправить" , class: "btn" %>
-			</div>
+				<h3>Импортировать контракты</h3>
+				<div class="col-md-6">
+					<%= form_tag import_contracts_path, multipart: true do %>
+					<%= file_field_tag :file, class: 'form-control'%>
+					<br>
+					<%= submit_tag "Отправить" , class: "btn" %>
+					<% end %>
+				</div>
+				<div class = "col-md-6">
+					Выберите файл с контрактами. Номер контракта должен быть уникальным. Разные адреса внутри одного контракта должны быть разделены ";"
+				</div>
+		</div>
 
-		<% end %>
-
+</div>
 <br>
 <br>
