--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -97,6 +97,12 @@ $(document).ready(function(){
 									<span class="glyphicon glyphicon-pencil"></span>&nbsp Новый объект
 									<% end %>
 								</li>
+								<li role="presentation">
+									<%= link_to new_contract_path do%>
+									<span class="glyphicon glyphicon-pencil"></span>
+				 					&nbspНовый контракт
+									<%end%>
+								</li>
 
 							</ul>
 						</div>
