--- a/app/views/requistions/new.html.erb
+++ b/app/views/requistions/new.html.erb
@@ -6,19 +6,19 @@
 		<div class="row">
 			<div class="form-group">
 					<label class=" col-xs-3">Объект</label>
-					
+
 					<div  class="col-xs-5">
-					<select required id="building_name" name="name" style="width: 100%"> 
+					<select required id="building_name" name="name" style="width: 100%">
 						<%=	options_for_select(@list.collect {|p| [ p.name ] }.uniq ) %>
 					</select>
 <script>
 
-$(document).ready(function() {
+addToMain(function() {
 	$('#building_name').select2({
 		placeholder: "название",
 		// allowClear: true
 	});
-	
+
 	function formatRepo (repo) {
 	return repo.arrival_address;
   };
@@ -42,7 +42,7 @@ $(document).ready(function() {
 
   $('#building_id').select2({
 	// allowClear: true,
-	
+
 	ajax: {
 		url: "/search",
 		dataType: 'json',
@@ -72,13 +72,13 @@ $(document).ready(function() {
   templateResult: formatRepo,
   templateSelection: formatRepoSelection,
   placeholder: "название"
-  }).change(function(){  		
+  }).change(function(){
   		$.ajax({url: "/building_name/"+ $('#building_id').val(), success: function(result){
         $('#building_name').select2('val', result);
     	}})
   });
 });
-</script>					
+</script>
 				</div>
 				<div class = "col-xs-1">
 					<button type="button" class="btn btn-default btn-xs clearbutton1">
@@ -91,7 +91,7 @@ $(document).ready(function() {
 			<div class="form-group">
 				<label class=" col-xs-3">Адрес</label>
 				<div class="col-xs-5">
-					<select required id="building_id" name="requistion[building_id]" style="width: 100%"> 
+					<select required id="building_id" name="requistion[building_id]" style="width: 100%">
 					</select>
 
 				</div>
@@ -141,19 +141,19 @@ $(document).ready(function() {
 			<div class="form-group">
 			<label class=" col-xs-3">Тип работ</label>
 			<div class="col-xs-5">
-				<%= f.select :type_requistion, [['АВАРИЯ (ЦО/ГВС/ХВС/Канализация)', 'Э'], 
-											['РЕМОНТ (ЦО/ГВС/ХВС/Канализация)', 'Г'], 
-											['АВАРИЯ (ЭЛЕКТРОСЕТИ)', 'X'], 
-											['РЕМОНТ (ЭЛЕКТРОСЕТИ)', 'К'], 
-											['АВАРИЯ (ВЕНТИЛЯЦИЯ/ДЫМОУДАЛЕНИЕ/ТС)', 'О'], 
-											['РЕМОНТ (ВЕНТИЛЯЦИЯ/ДЫМОУДАЛЕНИЕ/ТС)', 'П'], 
-											['АВАРИЯ СЛАБОТОЧНЫХ СИСТЕМ (АПС, СТРЕЛЕЦ, КТС, ДОМОФОН, ВИДЕО)', 'У'], 
-											['ТО СЛАБОТОЧНЫХ СИСТЕМ (АПС, СТРЕЛЕЦ, КТС, ДОМОФОН, ВИДЕО)', 'В'], 
-											['ТО ВЕНТИЛЯЦИИ/ВОЗД.ОТОПЛЕНИЯ', 'C'], 
-											['ТО АУУ (ОТОПЛЕНИЕ)', 'Д'], 
-											['ТО СИСТЕМ КОНДИЦИОНИРОВАНИЯ', 'А'], 
+				<%= f.select :type_requistion, [['АВАРИЯ (ЦО/ГВС/ХВС/Канализация)', 'Э'],
+											['РЕМОНТ (ЦО/ГВС/ХВС/Канализация)', 'Г'],
+											['АВАРИЯ (ЭЛЕКТРОСЕТИ)', 'X'],
+											['РЕМОНТ (ЭЛЕКТРОСЕТИ)', 'К'],
+											['АВАРИЯ (ВЕНТИЛЯЦИЯ/ДЫМОУДАЛЕНИЕ/ТС)', 'О'],
+											['РЕМОНТ (ВЕНТИЛЯЦИЯ/ДЫМОУДАЛЕНИЕ/ТС)', 'П'],
+											['АВАРИЯ СЛАБОТОЧНЫХ СИСТЕМ (АПС, СТРЕЛЕЦ, КТС, ДОМОФОН, ВИДЕО)', 'У'],
+											['ТО СЛАБОТОЧНЫХ СИСТЕМ (АПС, СТРЕЛЕЦ, КТС, ДОМОФОН, ВИДЕО)', 'В'],
+											['ТО ВЕНТИЛЯЦИИ/ВОЗД.ОТОПЛЕНИЯ', 'C'],
+											['ТО АУУ (ОТОПЛЕНИЕ)', 'Д'],
+											['ТО СИСТЕМ КОНДИЦИОНИРОВАНИЯ', 'А'],
 											['ТО ВОДОПОДГОТОВКИ БАССЕЙНОВ', 'Д'],
-											['ОПРЕССОВКА ТРУБОПРОВОДОВ', 'А'], 
+											['ОПРЕССОВКА ТРУБОПРОВОДОВ', 'А'],
 											['ГАРАНТИЙНОЕ ОБСЛУЖИВАНИЕ', 'Д']], { :prompt => "Выберите из списка" }, { :class => "form-control", required: ""  }  %>
 			</div>
 			</div>
@@ -166,7 +166,7 @@ $(document).ready(function() {
 			  <div class="col-xs-5">
 			  <%= f.text_field :info, :placeholder =>"Опишите проблему", class: "form-control"%>
 			</div>
-			
+
 			</div>
 		</div>
 
@@ -187,9 +187,9 @@ $(document).ready(function() {
 				<div  class="col-xs-5">
 				<select id="workers-select" name="workers[]" multiple  placeholder="Выберите исполнителей">
 				<%= options_for_select(User.worker.collect {|p| [ p.name, p.id ] })	%>
-				
+
 				</select>
-				
+
 				</div>
 			</div>
 			<script>
