fix_table_worker

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -60,7 +60,7 @@
 									<% end %>
 								</li>
 								<li role="presentation">
-									<%= link_to workers_path do %>
+									<%= link_to admins_path do %>
 										<span class="glyphicon glyphicon-list"></span>&nbsp Администраторы
 									<% end %>
 								</li>
